--- a/html/index.html
+++ b/html/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    hi
-  </body>
-  <script src="../js/index.js"></script>
+<html lang="bg">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Codewarriors managing system</title>
+    <link rel="stylesheet" href="../css/style.css">
+</head>
+<body>
+   
+    <header class="navbar">
+        <div class="navbar-logo">
+            <i class="fas fa-train"></i> Приложение за влакове
+        </div>
+        <nav class="navbar-links">
+            <a href="register.html">Регистрация</a>
+        </nav>
+    </header>
+
+    
+    <div class="container">
+        <aside class="sidebar">
+            <h3>Admin Menu</h3>
+            <ul>
+                <li><a href="#">Добави маршрут</a></li>
+                <li><a href="#">Добави спирка</a></li>
+                <li><a href="#">Добавени спирки</a></li>
+                <li><a href="#">Добавени маршрути</a></li>
+                <li><a href="#">Чат</a></li>
+            </ul>
+        </aside>
+
+        <main class="content">
+            <h1>Добре дошли в CodeDestroyers train system</h1>
+            <p>Направете следенето на влакове по-бързо и по-лесно</p>
+            <button class="cta-button">Започнете</button>
+        </main>
+    </div>
+
+   
+    <footer class="footer">
+        <p>© 2024 CodeDestroyers. Всички права са запазени</p>
+    </footer>
+
+    
+     <script src="index.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+</body>
 </html>
