idnex.js should be rewritten

--- a/html/index.html
+++ b/html/index.html
@@ -22,11 +22,10 @@
         <aside class="sidebar">
             <h3>Admin Menu</h3>
             <ul>
-                <li><a href="#">Добави маршрут</a></li>
-                <li><a href="#">Добави спирка</a></li>
-                <li><a href="#">Добавени спирки</a></li>
-                <li><a href="#">Добавени маршрути</a></li>
-                <li><a href="#">Чат</a></li>
+                <!-- tova trqbva da go ima samo admin-->
+                <li><a href="admin/Panel.html">Добави маршрут</a></li>
+                <li><a href="Routes.html">Добавени маршрути</a></li>
+                <li><a href="chat.html">Чат</a></li>
             </ul>
         </aside>
 
@@ -43,7 +42,6 @@
     </footer>
 
     
-     <script src="index.js"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    
 </body>
 </html>
