--- a/html/admin/Panel.html
+++ b/html/admin/Panel.html
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="bg">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Train Route Management</title>
-    <link rel="stylesheet" href="../../css/style.css">
-
+    <title>Home Page</title>
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
-
+<html lang="bg">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Codewarriors managing system</title>
+    <link rel="stylesheet" href="../css/style.css">
+</head>
 <body>
-    <h1>Admin Train Route Management</h1>
-
-    <!-- Table for Route Details -->
-    <table id="routeTable">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Start</th>
-                <th>End</th>
-                <th>Estimated Time</th>
-                <th>Boarding Time</th>
-                <th>Departure Time</th>
-                <th>Arrival Time</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Rows will be dynamically added here -->
-        </tbody>
-    </table>
-
-    <!-- Form for Adding/Editing Routes -->
-    <form id="routeForm">
-        <input type="text" id="routeStart" placeholder="Route Start" required>
-        <input type="text" id="routeEnd" placeholder="Route End" required>
-        <input type="number" id="routeEstimate" placeholder="Estimated Time (Minutes)" required>
-        <input type="datetime-local" id="bordingTime" placeholder="Boarding Time">
-        <input type="datetime-local" id="departureTime" placeholder="Departure Time">
-        <input type="datetime-local" id="arrivalTime" placeholder="Arrival Time">
-        <div class="form-actions">
-            <button type="button" id="addRoute">Add Route</button>
-            <button type="button" id="updateRoute" style="display: none;">Update Route</button>
+   
+    <header class="navbar">
+        <div class="navbar-logo">
+            <i class="fas fa-train"></i> Приложение за влакове
         </div>
-    </form>
-
-    <script src="../js/index.js"></script>
+        <nav class="navbar-links">
+            <a href="register.html">Регистрация</a>
+        </nav>
+    </header>
+    
+    <div class="container">
+        <aside class="sidebar">
+            <h3>Admin Menu</h3>
+            <ul>
+                <li><a href="#">Добави маршрут</a></li>
+                <li><a href="#">Добави спирка</a></li>
+                <li><a href="#">Добавени спирки</a></li>
+                <li><a href="#">Добавени маршрути</a></li>
+                <li><a href="#">Чат</a></li>
+            </ul>
+        </aside>
+        <main class="content">
+            <h1>Добре дошли в CodeDestroyers train system</h1>
+            <p>Направете следенето на влакове по-бързо и по-лесно</p>
+            <button class="cta-button">Започнете</button>
+        </main>
+    </div>
+   
+    <footer class="footer">
+        <p>© 2024 CodeDestroyers. Всички права са запазени</p>
+    </footer>
+    
+     <script src="index.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
