--- a/html/login.html
+++ b/html/login.html
@@ -7,24 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="login-container">
-        <div class="login-card">
-            <h1 class="login-title">Влезте в профила си</h1>
-            <form>
-                <div class="form-group">
-                    <label for="email">Имейл</label>
-                    <input type="email" id="email" placeholder="Въведете имейл" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Парола</label>
-                    <input type="password" id="password" placeholder="Въведете парола" required>
-                </div>
-                <button type="submit" class="btn-login">Вход</button>
-                <div class="login-footer">
-                    <p>Нямате акаунт? <a href="register.html">Регистрирайте се</a></p>
-                </div>
-            </form>
-        </div>
+    <div class="register-container">
+        <h1>Вход</h1>
+        <form id="registerForm" class="register-form">
+            <div class="form-group">
+                <label for="username">Име</label>
+                <input type="text" id="username" name="username" placeholder="Въведете име. Пример:user123" required>
+            </div>
+
+            
+
+            <div class="form-group">
+                <label for="password">Парола</label>
+                <input type="password" id="password" name="password" placeholder="Въведете парола" required>
+            </div>
+
+           
+
+            <button type="submit" class="cta-button">Вход</button>
+        </form>
+        <p class="login-link">Имате акаунт? <a href="login.html">Влезте в профила си</a></p>
     </div>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
    
