--- a/html/Routes.html
+++ b/html/Routes.html
@@ -25,10 +25,10 @@
             <h1>Маршрути</h1>
             <p>Тук можете да разгледате и управлявате всички маршрути на влаковете.</p>
 
-            <!-- Add Route Button -->
-            <button class="cta-button" onclick="window.location.href='add_route.html'">Добави нов маршрут</button>
+            <!-- Add Route Button if the user is an admin -->
+            <!--<button class="cta-button" onclick="window.location.href='add_route.html'">Добави нов маршрут</button> -->
             
-            <!-- Routes List -->
+            <!-- Routes List and should be sent to check in the api, its just that we did not have enough tim.-->
             <div class="routes-list">
                 <h2>Списък с маршрути</h2>
                 <ul>
