refactor of html and css and js.

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="navbar">
         <div class="navbar-logo">
-            <i class="fas fa-train"></i> Приложение за влакове
+            <i class="fas fa-train"></i> Train Destroyers
         </div>
         <nav class="navbar-links">
             <a href="register.html">Регистрация</a>
