--- a/html/login.html
+++ b/html/login.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <title>Login </title>
 </head>
 <body>
+    <header class="navbar">
+        <div class="navbar-logo">
+            <i class="fas fa-train"></i> Train Destroyers
+        </div>
+        <nav class="navbar-links">
+            <a href="index.html">Начало</a>
+            <a href="register.html">Регистрация</a>
+            <a href="Routes.html">Маршрути</a>
+            <a href="chat.html">Чат</a>
+        </nav>
+    </header>
     <div class="register-container">
         <h1>Вход</h1>
         <form id="registerForm" class="register-form">
@@ -26,7 +37,7 @@
 
             <button type="submit" class="cta-button">Вход</button>
         </form>
-        <p class="login-link">Имате акаунт? <a href="login.html">Влезте в профила си</a></p>
+        <p class="login-link">Нямате акаунт? <a href="register.html">Регистрирайте се.</a></p>
     </div>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
    
