--- a/html/register.html
+++ b/html/register.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <header class="navbar">
+        <div class="navbar-logo">
+            <i class="fas fa-train"></i> Train Destroyers
+        </div>
+        <nav class="navbar-links">
+            <a href="index.html">Начало</a>
+            <a href="login.html">Вход</a>
+            <a href="Routes.html">Маршрути</a>
+            <a href="chat.html">Чат</a>
+        </nav>
+    </header>
     <div class="register-container">
         <h1>Нпарвете си профил</h1>
         <form id="registerForm" class="register-form">
