--- a/html/admin/Panel.html
+++ b/html/admin/Panel.html
@@ -17,7 +17,7 @@
    
     <header class="navbar">
         <div class="navbar-logo">
-            <i class="fas fa-train"></i> Приложение за влакове
+            <i class="fas fa-train"></i> Train Destroyers
         </div>
         <nav class="navbar-links">
             <a href="register.html">Регистрация</a>
